[gd_scene load_steps=3 format=3 uid="uid://cm1oilpw288et"]

[ext_resource type="Script" uid="uid://qfkxdcxl2e4y" path="res://scripts/MainMenuShipBuilder.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StylePanel"]
bg_color = Color(0.05, 0.08, 0.12, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.8, 1, 0.3)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ShipBuilderPanel" type="PanelContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 70.0
offset_right = -50.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StylePanel")
script = ExtResource("1")

[node name="ShipBuilderVBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ShipBuilderHeader" type="HBoxContainer" parent="ShipBuilderVBox"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeaderIcon" type="ColorRect" parent="ShipBuilderVBox/ShipBuilderHeader"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
color = Color(0.2, 0.8, 1, 0.3)

[node name="HeaderTitle" type="Label" parent="ShipBuilderVBox/ShipBuilderHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 28
text = "Ship Selection"
vertical_alignment = 1

[node name="ShipBuilderToolbar" type="HBoxContainer" parent="ShipBuilderVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SearchSection" type="HBoxContainer" parent="ShipBuilderVBox/ShipBuilderToolbar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="SearchLabel" type="Label" parent="ShipBuilderVBox/ShipBuilderToolbar/SearchSection"]
layout_mode = 2
text = "Search:"
vertical_alignment = 1

[node name="SearchBar" type="LineEdit" parent="ShipBuilderVBox/ShipBuilderToolbar/SearchSection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Search ships..."

[node name="FilterSection" type="HBoxContainer" parent="ShipBuilderVBox/ShipBuilderToolbar"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FilterLabel" type="Label" parent="ShipBuilderVBox/ShipBuilderToolbar/FilterSection"]
layout_mode = 2
text = "Sort:"
vertical_alignment = 1

[node name="FilterOptions" type="OptionButton" parent="ShipBuilderVBox/ShipBuilderToolbar/FilterSection"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Name"
popup/item_0/id = 0
popup/item_1/text = "Created"
popup/item_1/id = 1
popup/item_2/text = "Type"
popup/item_2/id = 2
popup/item_3/text = "Level"
popup/item_3/id = 3

[node name="ActionButtons" type="HBoxContainer" parent="ShipBuilderVBox/ShipBuilderToolbar"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="QuickStarter" type="Button" parent="ShipBuilderVBox/ShipBuilderToolbar/ActionButtons"]
layout_mode = 2
text = "Starter"

[node name="QuickMedium" type="Button" parent="ShipBuilderVBox/ShipBuilderToolbar/ActionButtons"]
layout_mode = 2
text = "Medium"

[node name="QuickHeavy" type="Button" parent="ShipBuilderVBox/ShipBuilderToolbar/ActionButtons"]
layout_mode = 2
text = "Heavy"

[node name="ManagementButtons" type="HBoxContainer" parent="ShipBuilderVBox/ShipBuilderToolbar"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RenameButton" type="Button" parent="ShipBuilderVBox/ShipBuilderToolbar/ManagementButtons"]
layout_mode = 2
text = "Rename"

[node name="LaunchButton" type="Button" parent="ShipBuilderVBox/ShipBuilderToolbar/ManagementButtons"]
layout_mode = 2
text = "Launch"

[node name="ExportButton" type="Button" parent="ShipBuilderVBox/ShipBuilderToolbar/ManagementButtons"]
layout_mode = 2
text = "Export"

[node name="ShipBuilderBody" type="VBoxContainer" parent="ShipBuilderVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ShipScroll" type="ScrollContainer" parent="ShipBuilderVBox/ShipBuilderBody"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ShipGrid" type="GridContainer" parent="ShipBuilderVBox/ShipBuilderBody/ShipScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="ShipBuilderFooter" type="HBoxContainer" parent="ShipBuilderVBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_constants/separation = 20

[node name="SelectedInfo" type="VBoxContainer" parent="ShipBuilderVBox/ShipBuilderFooter"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="SelectedShipLabel" type="Label" parent="ShipBuilderVBox/ShipBuilderFooter/SelectedInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "No ship selected"

[node name="SelectedShipDetails" type="Label" parent="ShipBuilderVBox/ShipBuilderFooter/SelectedInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Choose a ship to view stats"
autowrap_mode = 3

[node name="ShipPreview" type="HBoxContainer" parent="ShipBuilderVBox/ShipBuilderFooter"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="StartButtonCenter" type="CenterContainer" parent="ShipBuilderVBox"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="ShipBuilderVBox/StartButtonCenter"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "START GAME"
